40% progress but fixed layout issues

--- a/pixeldraw.css
+++ b/pixeldraw.css
@@ -1,67 +1,73 @@
-body{
-	width: 100%;
-	height: 100%;
+body,html{
 	margin: 0;
 	padding: 0;
 }
 
-#content-wrapper-left{
-	background-color: red;
-	width: 30%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
+/*webpage layout */
+.content-wrapper-left{
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width:40%;
 }
 
+.content-wrapper-right{
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width:60%;
+}
+
+/*the title and logo for webpage*/
 #header{
-	float: left;
-	height: 100px;
-	width: 450px;
-	margin: 20px 30px;
-	padding-bottom: 20px;
+	position: relative;
+	width: 400px;
+	height: 80px;
+	margin: 0 auto;
+	padding-top: 10px;
 }
 
 #header > h1{
 	font-size: 50px;
 	font-family: "Trebuchet MS",sans-serif;
 	color: #1c94c4;
-	margin-left: 40px;
-	margin-bottom: 10px;
+	margin-top: 0;
 }
 
 #header > img{
-	float: right;
-	margin-top: -70px;
-	margin-right: 30px;
+	position: absolute;
+	right: 10px;
+	top: 10px;
 }
 
+/*Drawing pad status display area*/
 .grid-infobox{
 	width: 400px;
 	height: 150px;
-	float: left;
 	position: absolute;
-	left: 60px;
-	top: 40px;
+	left: 10%;
+	top: 5%;
 	border: 1px solid #cccccc;
 	border-radius: 2%;
 }
 
 #infobox-title{
 	width: 170px;
-	height: 40px;
+	height: 30px;
 	color: #1c94c4;
 	font-size: 20px;
 	background-color: #fff;
 	text-align: center;
-	position: relative;
-	float: left;
-	left: 80px;
-	top:-40px;
+	position: absolute;
+	left: 30px;
+	top: -10px;
 }
 
 table{
-	float: left;
 	position: absolute;
+	float: left;
 	top: 40px;
 	left: 50px;
 }
@@ -78,16 +84,13 @@ table{
 	font-size: 16px;
 }
 
-
+/*user controls area(left-bottom of screen)*/
 .user-control-wrapper{
-	width: 450px;
-	height: 450px;
 	position: absolute;
-	float: left;
-	clear: both;
-	left: 30px;
-	bottom:50px;
-	border:none;
+	width: 100%;
+	height: 480px;
+	left: 0;
+	bottom: 0;
 }
 
 #options-wrapper{
@@ -101,12 +104,20 @@ table{
 	font-size: 30px;
 }
 
+.user-inputs{
+	position: relative;
+	width: 80%;
+	height: 120px;
+	margin: 10px auto;
+	margin-bottom: 5px;
+}
+
 #set-grid-size{
 	font-size: 20px;
 	color: #1c94c4;
 	float: right;
+	margin-top: 20px;
 	margin-right: 50px;
-	margin-top: 20px; 
 }
 
 #set-grid-size > input{
@@ -129,7 +140,6 @@ table{
 	font-size: 20px;
 	color: #1c94c4;
 	float: right;
-	clear: right;
 	margin-right: 50px;
 	margin-top: 8px;	
 }
@@ -138,16 +148,13 @@ input{
 	font-size: 20px;
 }
 
-
+/*the sketchpad area*/
 .grid{
 	display: table;
-	border-spacing: 0;
 	height: 650px;
 	width: 650px;
-	float: right;
-	margin-right: 30px;
-	margin-top: 15px;
-	border-radius: 1%;
+	margin: 15px auto;
+	border-radius: 2px;
 	border:1px solid #cccccc;
 	background-color: #e6e6e6;
 }
@@ -162,33 +169,46 @@ input{
 	display: table-row;
 }
 
+/*helps identify when mouse hovers over footer area*/
+#footer-alias{
+	background-color: transparent;
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 40px;
+	bottom: 0;
+}
 
-#footer{
+/*the footer*/
+.footer{
 	position: fixed;
+	z-index: 1;
 	width: 100%;
 	height: 30px;
-	border-top: 1px solid #cccccc;	
+	bottom: 0;
+	border-top: 1px solid #cccccc;
 	background-color: #e6e6e6;
-	bottom:0;
-	margin: 0;
 	line-height: 30px;
 }
 
-#footer > a:hover{
+.footer > a{
+	color: #454545;
+	text-decoration: none;
+}
+
+.footer > a:hover{
 	text-decoration: underline;
 }
 
-#left-foot{
-	color: #454545;
-	text-decoration: none;
+#left-foot{	
+	position: absolute;
 	float: left;
-	padding-left: 300px;
+	left: 300px;
 }
 
 #right-foot{
-	color: #454545;
-	text-decoration: none;
+	position: absolute;
 	float: right;
-	padding-right: 300px;
+	right: 300px;
 }
 
